# aur-mirror-meta

./: AGENTS.md  Cargo.toml  PRD.md  README.md
.github/workflows/: deploy.yml
docs/: systemd.md
src/: aur_fetcher.rs  database.rs  main.rs  rpc_server.rs  srcinfo_parse.rs  supplement_fetcher.rs  syncer.rs  types.rs
