[package]
name = "aur-mirror-meta"
version = "1.0.0"
edition = "2021"
description = "AUR mirror metadata fetching and RPC server tool"

[dependencies]
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-extra = { version = "0.12", features = ["form", "query"] }
itertools = "0.14"
futures = "0.3"
toml = "0.9"
dirs = "6.0"
gix-packetline = { version = "0.20.0", features = ["async-io"] }
gix-pack = { version = "0.63.0", features = ["pack-cache-lru-dynamic"] }
gix-hash = "0.21.0"
gix-object = "0.53.0"
async-tempfile = "0.7.0"
tokio-util = { version = "0.7.17", features = ["compat"] }
